feat setup user auth

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.datasource.username=rms_auth_user
 spring.datasource.password=rms_auth_password
 
 # Hibernate / JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
