--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -8,10 +8,18 @@ logging.level.root=info
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 # Postgres DB connection
-spring.datasource.url=jdbc:postgresql://localhost:7000/rms_auth_db
-spring.datasource.username=rms_auth_user
-spring.datasource.password=rms_auth_password
+spring.datasource.url=jdbc:postgresql://localhost:7000/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 # Hibernate / JPA
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Spring Doc
+springdoc.api-docs.path=/api-docs
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
+
