--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -2,15 +2,20 @@ spring.application.name=auth-service
 
 server.port=5000
 
+# Eureka Client
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
 # Logging
 logging.level.root=info
 #logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 # Postgres DB connection
-#spring.datasource.url=jdbc:postgresql://localhost:7000/${DATABASE_NAME}
-#spring.datasource.username=${DATABASE_USER}
-#spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:7000/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 # Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -20,6 +25,6 @@ spring.jpa.show-sql=true
 springdoc.api-docs.path=/api-docs
 
 # JWT Configuration
-#jwt.secret=${JWT_SECRET}
-#jwt.expiration=${JWT_EXPIRATION}
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
 
