--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -13,9 +13,9 @@ logging.level.root=info
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 # Postgres DB connection
-spring.datasource.url=jdbc:postgresql://localhost:7000/${DATABASE_NAME}
-spring.datasource.username=${DATABASE_USER}
-spring.datasource.password=${DATABASE_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://localhost:7000/${DATABASE_NAME}
+#spring.datasource.username=${DATABASE_USER}
+#spring.datasource.password=${DATABASE_PASSWORD}
 
 # Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -25,6 +25,6 @@ spring.jpa.show-sql=true
 springdoc.api-docs.path=/api-docs
 
 # JWT Configuration
-jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION}
+#jwt.secret=${JWT_SECRET}
+#jwt.expiration=${JWT_EXPIRATION}
 
