--- a/food-service/src/main/resources/application.properties
+++ b/food-service/src/main/resources/application.properties
@@ -13,9 +13,9 @@ logging.level.root=info
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 # Postgres DB connection
-spring.datasource.url=jdbc:postgresql://localhost:7001/${RMS_FOOD_DATABASE_NAME}
-spring.datasource.username=${RMS_FOOD_DATABASE_USER}
-spring.datasource.password=${RMS_FOOD_DATABASE_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://localhost:7001/${RMS_FOOD_DATABASE_NAME}
+#spring.datasource.username=${RMS_FOOD_DATABASE_USER}
+#spring.datasource.password=${RMS_FOOD_DATABASE_PASSWORD}
 
 # Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
