--- a/food-service/src/main/resources/application.properties
+++ b/food-service/src/main/resources/application.properties
@@ -2,10 +2,8 @@ spring.application.name=food-service
 
 server.port=5001
 
-# Eureka Client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+# Auth Service URL
+auth.service.url=${AUTH_SERVICE_URL}
 
 # Logging
 logging.level.root=info
@@ -13,9 +11,9 @@ logging.level.root=info
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 # Postgres DB connection
-#spring.datasource.url=jdbc:postgresql://localhost:7001/${RMS_FOOD_DATABASE_NAME}
-#spring.datasource.username=${RMS_FOOD_DATABASE_USER}
-#spring.datasource.password=${RMS_FOOD_DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${RMS_FOOD_DATABASE_NAME}
+spring.datasource.username=${RMS_FOOD_DATABASE_USER}
+spring.datasource.password=${RMS_FOOD_DATABASE_PASSWORD}
 
 # Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -23,8 +21,4 @@ spring.jpa.show-sql=true
 
 # Spring Doc
 springdoc.api-docs.path=/api-docs
-
-# JWT Configuration
-#jwt.secret=${RMS_FOOD_JWT_SECRET}
-#jwt.expiration=${RMS_FOOD_JWT_EXPIRATION}
 
