--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -23,3 +23,7 @@ springdoc.api-docs.path=/api-docs
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=${EUREKA_SERVICE_URL}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
