--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.jpa.show-sql=true
 # Spring Doc
 springdoc.api-docs.path=/api-docs
 
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=${EUREKA_SERVICE_URL}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
